opam-version: "2.0"
name: "ssl"
version: "0.5.10"
maintainer: "Samuel Mimram <samuel.mimram@ens-lyon.org>"
homepage: "https://github.com/savonet/ocaml-ssl"
dev-repo: "git+https://github.com/savonet/ocaml-ssl.git"
bug-reports: "https://github.com/savonet/ocaml-ssl/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "2.0.0"}
  "dune-configurator"
  "base-unix"
  "conf-libssl"
]
synopsis: "Bindings for OpenSSL"
authors: "Samuel Mimram <samuel.mimram@ens-lyon.org>"
