opam-version: "2.0"
name: "ssl"
version: "0.5.11"
maintainer: "Samuel Mimram <samuel.mimram@ens-lyon.org>"
homepage: "https://github.com/savonet/ocaml-ssl"
dev-repo: "git+https://github.com/savonet/ocaml-ssl.git"
bug-reports: "https://github.com/savonet/ocaml-ssl/issues"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "2.0.7"}
  "dune-configurator"
  "base-unix"
  "conf-libssl"
  "alcotest" {with-test}
  "bisect_ppx" {dev & >= "2.5.0"}
]
synopsis: "Bindings for OpenSSL"
authors: "Samuel Mimram <samuel.mimram@ens-lyon.org>"
