(library
 (name ssl)
 (public_name ssl)
 (libraries unix)
 (wrapped false)
 (foreign_stubs
   (language c)
   (names ssl_stubs)
   (flags (:include c_flags.sexp)))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp ocaml_ssl.h)
 (action (run ./config/discover.exe)))
