(library
 (name util)
 (modules util)
 (libraries ssl threads str alcotest))

(test
 (name ssl_test)
 (modules ssl_test)
 (libraries ssl alcotest)
 (deps digicert_certificate.pem))

(test
 (name ssl_comm)
 (modules ssl_comm)
 (libraries ssl alcotest))
 
(test
 (name ssl_context)
 (modules ssl_context)
 (libraries ssl alcotest util)
 (deps client.pem client.key server.key ca.pem ca.key))

(test
 (name ssl_ciphers)
 (modules ssl_ciphers)
 (libraries ssl alcotest util)
 (deps client.pem client.key dh4096.pem server.key server.pem))

(test
 (name ssl_certs)
 (modules ssl_certs)
 (libraries ssl alcotest util)
 (deps client.pem ca.pem ca.key server.key server.pem))

(test
 (name ssl_sock)
 (modules ssl_sock)
 (libraries ssl alcotest util)
 (deps ca.pem ca.key server.key server.pem))

(test
 (name ssl_io)
 (modules ssl_io)
 (libraries ssl alcotest util)
 (deps ca.pem ca.key server.key server.pem))