(rule
 (alias github_action_tests)
 (action
  (run ./ssl_version.exe))
 (deps
  (alias_rec runtest)))

(executable
 (name ssl_version)
 (modules ssl_version)
 (libraries ssl alcotest))

(library
 (name util)
 (modules util)
 (libraries ssl threads str alcotest))

(tests
 (names ssl_test)
 (modules ssl_test)
 (libraries ssl alcotest util)
 (deps
  digicert_certificate.pem
  client.pem
  client.key
  dh4096.pem
  server.key
  server.pem
  ca.pem
  ca.key))

(tests
 (names ssl_comm ssl_context ssl_ciphers ssl_certs ssl_sock ssl_io)
 (modules ssl_comm ssl_context ssl_ciphers ssl_certs ssl_sock ssl_io)
 (libraries ssl alcotest util)
 (deps
  digicert_certificate.pem
  client.pem
  client.key
  dh4096.pem
  server.key
  server.pem
  ca.pem
  ca.key)
 (enabled_if
  (<> %{os_type} "Win32")))
